# AI-SDR-Agent

./: .env.example  .gitignore  Makefile  NextSteps.py  README.md  main.py  pyproject.toml  requirements.txt  start.sh
.claude/: settings.local.json
backend/: __init__.py  graph.py  run_workflow.py
backend/playground/: test_code.py
backend/src/: __init__.py  graph.py
data/: output.txt  output_llm.txt  output_raw.txt
outputs/: glean_1ee638e4.json  glean_96494e30.json
playground/: comparison.txt  sources.json  tesla.json  test_code.py  test_tavily.py  twiliio.json
results/: anthropic.json  perplexity.json  samsara.json  vanta.json
scripts/: test_research.py
src/: analyzer.py  app.py  company_identity.py  discovery.py  graph.py  processor.py  run_workflow.py  runner.py  scrapper.py  sources.json  storage_manager.py
src/logger/: llm_logger.py
src/nodes/: collector.py  curator.py  editor.py  grounding.py
src/schema/: CompanyPersona.py  LeadCard.py  PageIntent.py  state.py
src/utils/: json_utils.py  page_intents.py  prompts.py  url_config.py  url_utils.py
storage/identities/: AgilityRecovery.md  AgilityRecovery_workflow.json  AppliedIntuition_links.json  MountSinai_links.json  Perplexity_links.json  Samsara_links.json  SpaceX_links.json  Stripe_links.json  Toast Tab.json  Twilio_links.json  Vanta_links.json  perplexity.json  samsara.json  spacex.json  stripe.json  toasttab.json  twilio.json  uber.json  vanta.json
storage/personas/: AgilityRecovery_persona.json  (+4 more)
ui/: .env.example  index.html  package-lock.json  package.json  tailwind.config.js
(+50 files in other folders)
