[project]
name = "ai-sdr-agent"
version = "0.1.0"
description = "A tool that takes a company URL, scrapes their latest news/blog, finds a relevant lead on LinkedIn (simulated or via API), and generates a hyper-personalized, multi-channel outreach strategy."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai",
    "beautifulsoup4",
    "requests",
    "pandas",
    "numpy",
    "pydantic",
    "python-dotenv",
    "langchain-openai",
    "langchain-anthropic",
    "chromadb",
    "streamlit>=1.53.1",
    "streamlit-autorefresh>=1.0.1",
    "publicsuffix2>=2.20191221",
    "tavily-python>=0.7.21",
    "langgraph>=1.0.8",
]

[project.scripts]
neo = "src.runner:main"

[tool.uv]
package = true
